feat: add characters filters
